# update-dns-record

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  example.env  pyproject.toml  requirements.txt
update-dns-record/: __init__.py  __main__.py  cloudflare.py
