[project]
name = "update-dns-record"
version = "0.1.0"
description = "Update a provider DNS record"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
keywords = ["dns", "record"]
authors = [{ email = "stevengillies@outlook.com" }, { name = "Steven Gillies" }]
maintainers = [
    { email = "stevengillies@outlook.com" },
    { name = "Steven Gillies" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

dependencies = ["click~=8.1.7", "requests~=2.31.0"]

[project.optional-dependencies]
dev = ["black~=24.2.0", "pip-tools~=7.4.0"]

[project.urls]
documentation = "https://github.com/umbracorp/update-dns-record/README.md"
repository = "https://github.com/umbracorp/update-dns-record"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
